--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
 <head>
+<title>MY홈페이지</title>
 </head>
 <body>
 <h1>정민선의 홈페이지</h1>
-
+<h2>정민선의 홈페이지</h2>
+<h3>정민선의 홈페이지</h3>
+<h4>정민선의 홈페이지</h4>
+<h5>정민선의 홈페이지</h5>
+<h6>정민선의 홈페이지</h6>
 정민선의 홈페이지
 </body>
 </html>
