--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 </head>
 <body>
 <h1>정민선의 홈페이지</h1>
-<h2>정민선의 홈페이지</h2>
-<h3>정민선의 홈페이지</h3>
-<h4>정민선의 홈페이지</h4>
-<h5>정민선의 홈페이지</h5>
-<h6>정민선의 홈페이지</h6>
+<h2>정민선의 홈페이지 h2 </h2>
+<h3>정민선의 홈페이지 h3 </h3>
+<h4>정민선의 홈페이지 h4 </h4>
+<h5>정민선의 홈페이지 h5 </h5>
+<h6>정민선의 홈페이지 h6 </h6>
+<img src="my.jpg">
 정민선의 홈페이지
 </body>
 </html>
