--- a/name.html
+++ b/name.html
@@ -1,4 +1,10 @@
+<html>
+<head>
 <script>
 name = prompt("당신의 이름은 무엇인가요?")
 alert("반갑습니다." + name + "님")
 </script>
+</head>
+<body>
+  <h1>인사</h1>
+</body>
