--- a/sum.html
+++ b/sum.html
@@ -6,9 +6,9 @@
 <h1>sum 구하기</h1>
 <script>
 sum = 0;
-kk = 100000000
-start + new Date()
-for ( k=1 ; k<= 10 ; k++ ) { 
+kk = 100000000;
+start = new Date()
+for ( k=1 ; k<= kk ; k++ ) { 
       sum = sum + k;
      //document.write("k is" + kk + ",sum is " + sum + "<br>")
 }
