--- a/sum.html
+++ b/sum.html
@@ -10,7 +10,7 @@ kk = 100000000;
 start = new Date()
 for ( k=1 ; k<= kk ; k++ ) { 
       sum = sum + k;
-     //document.write("k is" + kk + ",sum is " + sum + "<br>")
+     //document.write("k is" + k + ",sum is " + sum + "<br>")
 }
 end = new Date()
 document.write("kk is" + kk + ",sum is" + sum + "<br>")
