--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>정민선의 홈페이지</h1>
   <a href = "https://maehol.hs.kr/#url">매홀고</a><br>
-  <a href = "sum.html">sum</a><br>
+  <a href = "https://jms721.github.io/erb2023/sum.html">sum</a><br>
 <img width="25%"src="my.jpg">
 <img width="25%"src="http://www.econovill.com/news/photo/201812/353683_236958_5647.jpg">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BBdC1rl5sKY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
