--- a/숫자놀이.html
+++ b/숫자놀이.html
@@ -8,8 +8,8 @@
 <script>
 a = prompt("당신의 이름은 무엇인가요?")
 alert (a + "님 안녕하세요.")
-b = prompt("당신의 나이는 몇살인가요?")
-alert(a+"님의 나이는" +b+"입니다.")
+b = prompt("당신이 원하는 숫자 두개를 곱해드립니다.")
+alert(b)
 //document.write(a)
 //document.write(b)
 c=prompt("숫자 입력")
