--- a/숫자놀이.html
+++ b/숫자놀이.html
@@ -9,7 +9,7 @@
 a = prompt("당신의 이름은 무엇인가요?")
 alert (a + "님 안녕하세요.")
 b = prompt("당신이 원하는 숫자 두개를 곱해드립니다.")
-alert(b)
+alert(a+"님이 원하는 숫자는 무엇인가요?")
 //document.write(a)
 //document.write(b)
 c=prompt("숫자 입력")
