--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>정민선의 홈페이지</h1>
   <a href = "https://maehol.hs.kr/#url">매홀고</a><br>
   <a href = "https://seoultech.ac.kr">서울과기대</a><br>
-  <a href = "chat.html">분식집</a><br>
+  <a href = "chat.html">챗봇</a><br>
   <a href = "sum.html">sum</a><br>
 <img width="25%"src="my.jpg">
 <img width="25%"src="http://www.econovill.com/news/photo/201812/353683_236958_5647.jpg">
